--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -36,5 +36,6 @@
     <string name="lanbahnpanelTitleString">LanbahnPanel</string>
     <string name="versionUnknown">version x.x</string>
     <string name="unknown">-?-</string>
+    <string name="wifi_disconnected">No Wifi !</string>
 
 </resources>
