--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -14,7 +14,7 @@
     <string name="disp_settings">Einstellungen anzeigen</string>
     <string name="loco_address">Lok Adresse (1..103) </string>
     <string name="draw_addresses">Weichen/Signal Adressen anzeigen</string>
-    <string name="draw_routebtn_addresses">Route/Sensor Adressen anzeigen</string>
+    <string name="draw_routebtn_addresses">RouteBtn/Sensor Adressen anzeigen</string>
     <string name="enableZoom">Enable Panel Zoom</string>
     <string name="enableEdit">Enable Edit Mode</string>
     <string name="flipUpsideDown">Layout auf den Kopf stellen (Blick von anderer Seite)</string>
@@ -32,7 +32,7 @@
     <string name="sel_style">Anzeige Stil wählen</string>
     <string name="sel_style_default">US</string>
     <string name="aboutString">"LanbahnPanel is free software - you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, version 3. LanbahnPanel is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  For details about the GNU General Public License see http://www.gnu.org/licenses "</string>
-    <string name="copyrightString">Copyright 2014-2016 - Michael Blank - mblank@bawue.de</string>
+    <string name="copyrightString">Copyright 2014-2017 - Michael Blank - mblank@bawue.de</string>
     <string name="moreInfoString">more info on http://www.oscale.net/android</string>
     <string name="lanbahnpanelTitleString">LanbahnPanel</string>
     <string name="versionUnknown">version x.x</string>
