--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="draw_addresses">Display Turnout/Signal Addresses</string>
     <string name="enableZoom">Enable Panel Zoom</string>
     <string name="enableEdit">Enable Edit Mode</string>
-    <string name="enableDemo">Enable Demo Mode</string>
+    <string name="enableDemo" translatable="false">Enable Demo Mode</string>
     <string name="flipUpsideDown">view panel element from the other side</string>
     <string name="saveStates">Save States of Device on Appl. Pause/Stop</string>
     <string name="enableAllAdresses">Enable ALL valid lanbahn addresses</string>
@@ -32,15 +32,16 @@
     <string name="sel_style">Select Display Style</string>
     <string name="sel_style_default">US</string>
     <string name="aboutString">"LanbahnPanel is free software - you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, version 3. LanbahnPanel is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  For details about the GNU General Public License see http://www.gnu.org/licenses "</string>
-    <string name="copyrightString">Copyright 2014-2016 - Michael Blank - mblank@bawue.de</string>
+    <string name="copyrightString">Copyright 2014-2017 - Michael Blank - mblank@bawue.de</string>
     <string name="moreInfoString">more info on http://www.oscale.net/android</string>
     <string name="lanbahnpanelTitleString">LanbahnPanel</string>
     <string name="versionUnknown">version x.x</string>
     <string name="unknown">-?-</string>
     <string name="wifi_disconnected">No Wifi !</string>
-    <string name="draw_routebtn_addresses">Display Route/Sensor Addresses</string>
-    <string name="general_settings">Settings</string>
-    <string name="files_settings">Config Files</string>
-    <string name="port_sh">Server Port</string>
-    <string name="default_server_ip">192.168.2.50</string>
+    <string name="draw_routebtn_addresses">Display RouteBtn/Sensor Addresses</string>
+    <string name="general_settings" translatable="false">Settings</string>
+    <string name="files_settings" translatable="false">Config Files</string>
+    <string name="port_sh" translatable="false">Server Port</string>
+    <string name="default_server_ip" translatable="false">192.168.2.50</string>
+    <string name="questionmark">-?-</string>
 </resources>
