--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
      -->
     <string name="default_notification_channel_name" translatable="true">Lanbahn</string>
     <string name="check_service">Check Service</string>
+    <string name="panel_cfg_files">Panel Config File (\'panel....xml\')</string>
 </resources>
