--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,10 +57,15 @@
     <string name="default_notification_channel_name" translatable="false">Lanbahn</string>
     <string name="check_service" translatable="false">Check Service</string>
     <string name="panel_cfg_files" translatable="false">Panel XML Config File</string>
+    <string name="server_ip" translatable="false">Server IP address</string>
     <string name="server_port" translatable="false">Server port</string>
     <string name="not_connected" translatable="false">currently not connected to a server</string>
 <string name="get_panel_from_server" translatable="false">Get panel file from server</string>
     <string name="enableAutoscale">Automatic scale</string>
     <string name="sel_scale">Select type of scaling</string>
     <string name="sel_scale_default">auto</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="pref_header_server">Server</string>
+    <string name="pref_header_display">Display</string>
+    <string name="pref_header_control">Control</string>
 </resources>
