--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -49,4 +49,6 @@
     <string name="sel_scale">Select type of scaling</string>
     <string name="title_activity_settings">Settings</string>
     <string name="display_five_quadrants">Display 5 views (full + 4 quadrants)</string>
+    <string name="discover_turnouts">Discover new Turnouts</string>
+    <string name="routing_active">Routing ON</string>
 </resources>
