--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -55,4 +55,5 @@
     <string name="no_inverted">Nein</string>
     <string name="back">Zurück</string>
     <string name="save">Speichern</string>
+    <string name="route_invalid">Fahrstraße kann nicht gestellt werden!</string>
 </resources>
