--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -55,4 +55,5 @@
     <string name="yes_inverted">Yes</string>
     <string name="no_inverted">No</string>
     <string name="back">Back</string>
+    <string name="route_invalid">Route cannot be set!</string>
 </resources>
