--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,4 +99,5 @@
     <string name="discover_turnouts">Discover new Turnouts</string>
     <string name="routing_active">Routing ON</string>
     <string name="save">Save</string>
+    <string name="route_invalid">Route cannot be set!</string>
 </resources>
