added ControlSystemPref (but curr. not enabled and not really use). added MultipleRead Command

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -56,4 +56,5 @@
     <string name="back">Zurück</string>
     <string name="save">Speichern</string>
     <string name="route_invalid">Fahrstraße kann nicht gestellt werden!</string>
+    <string name="sel_system_type">Control System</string>
 </resources>
