--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -56,4 +56,5 @@
     <string name="no_inverted">No</string>
     <string name="back">Back</string>
     <string name="route_invalid">Route cannot be set!</string>
+    <string name="sel_system_type">Control System</string>
 </resources>
