--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -33,7 +33,7 @@
     <string name="sel_style_default">US</string>
     <string name="aboutString">"LanbahnPanel is free software - you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, version 3. LanbahnPanel is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  For details about the GNU General Public License see http://www.gnu.org/licenses "</string>
     <string name="usageString">to be used with SX3PC program, see SELECTRIX </string>
-    <string name="moreInfoString">more info on http://www.oscale.net/android</string>
+    <string name="moreInfoString">mehr Info unter https://opensx.net/lanbahnpanel</string>
     <string name="versionUnknown">version x.x</string>
     <string name="unknown">-?-</string>
     <string name="wifi_disconnected">Kein WLAN !</string>
@@ -59,4 +59,8 @@
     <string name="sel_system_type">Control System</string>
     <string name="adresse2">Adr. 2</string>
     <string name="display_five_quadrants">Display 5 views (full + 4 quadrants)</string>
+    <string name="select">Auswählen</string>
+    <string name="selectloco">Lok auswählen</string>
+    <string name="server_ip" translatable="false">Server IP Adresse</string>
+    <string name="server_port" translatable="false">Server Port</string>
 </resources>
