--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,8 +76,8 @@
     <string name="are_you_sure_this_will_overwrite_any_existing_backup_data">Are you sure (this will overwrite any existing backup data)?</string>
     <string name="external_storage_is_not_available_unable_to_export_data">External storage is not available, unable to export data.</string>
     <string name="different_icon">anderes Lok-Icon</string>
-    <string name="add_loco_to_xml_file">add_loco_to_xml_file</string>
-    <string name="add_loco_title">add_loco_title</string>
+    <string name="add_loco_to_xml_file" translatable="false">add_loco_to_xml_file</string>
+    <string name="add_loco_title">Add Loco Title</string>
     <string name="name">Loco Name</string>
     <string name="back">back</string>
     <string name="address">Loco Address</string>
@@ -86,20 +86,21 @@
     <string name="selectloco">select Loco</string>
     <string name="select">Select</string>
     <string name="no_locos">No Locos</string>
-    <string name="locodb">Loco DB</string>
+    <string name="locodb" translatable="false">Loco DB</string>
     <string name="error_enter_address_first">ERROR: please enter loco ADDRESS first!</string>
     <string name="error_enter_name_first">ERROR: please enter NAME first!</string>
     <string name="sx_adresse">Selectrix Adresse</string>
-    <string name="_sx_bit">" SX-Bit"</string>
+    <string name="_sx_bit" translatable="false">" SX-Bit"</string>
     <string name="inverted">"invert"</string>
     <string name="yes_inverted">Y</string>
     <string name="no_inverted">N</string>
-    <string name="loco_cfg_files">Loco Config File</string>
+    <string name="loco_cfg_files" translatable="false">Loco Config File</string>
     <string name="pref_header_loco">Loco Control</string>
     <string name="discover_turnouts">Discover new Turnouts</string>
     <string name="routing_active">Routing ON</string>
     <string name="save">Save</string>
     <string name="route_invalid">Route cannot be set!</string>
+    <string name="route_locked">Route (turnouts) locked, cannot be set!</string>
     <string name="sel_system_type">Select Control System Type</string>
     <string name="display_five_quadrants">Display 5 views (full + 4 quadrants)</string>
 </resources>
